tests/fixtures/invalid/pow_str_int.py
# Cannot call pow() with Str, Int
x = pow("hello", 1)
